Use new collector methods #11213 (#11214)